fix spacing

--- a/src/app/compound-data/compound-assay-data/compound-assay-data.component.scss
+++ b/src/app/compound-data/compound-assay-data/compound-assay-data.component.scss
@@ -3,7 +3,7 @@
 }
 
 .vendor-btn {
-  // margin-top: 15px;
+  margin: 10px 0;
   color: #7e8b98;
 }
 
